# lipsync-runtime

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: compose.runtime.yaml
docker/gateway/: Dockerfile
docker/init/: Dockerfile  download_weights.py
docker/musetalk/: Dockerfile  serve.py
docker/sadtalker/: Dockerfile  serve.py
src/talking_head_runtime/: __init__.py  app.py  config.py  docker_control.py  models.py  queue.py  storage.py  worker.py
src/talking_head_runtime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_docker_control.py  test_models.py  test_storage.py
weights/: musetalk-cache.manifest.json  musetalk.manifest.json  sadtalker.manifest.json
