[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talking-head-runtime"
version = "0.1.0"
description = "Local Docker runtime for MuseTalk and SadTalker with a queued gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "pillow>=10,<12",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "python-multipart>=0.0.9,<1",
    "redis>=5.2,<6",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
